Resolve mobile scrollbars issue

--- a/src/styles/KernelFountain.scss
+++ b/src/styles/KernelFountain.scss
@@ -1,5 +1,5 @@
 .Kernel-fountain {
-  position: absolute;
+  position: fixed;
   left: 0;
   overflow: visible;
   top: 0;
